src/snapshots/herdr_pets__render__tests__caption_shows_the_hovered_name_on_the_bottom_row.snap
---
source: src/render.rs
expression: terminal.backend()
---
"                                        "
"                            Zz          "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                         ▄▀▀▄      ▄▀▀  "
"                         ▀▀▀▀      ▀▀▀  "
"backend-api                             "
