src/snapshots/herdr_pets__render__tests__reconcile_then_draw_shows_the_incoming_herd.snap
---
source: src/render.rs
expression: terminal.backend()
---
"                                                            "
"                                                !           "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                         ▄▀▀ ▄▀▀▄           "
"                                         ▀▀▀ ▀▀▀▀           "
