src/snapshots/herdr_pets__render__tests__renders_a_hat_above_the_focused_pet_and_nothing_above_the_rest.snap
---
source: src/render.rs
expression: terminal.backend()
---
"                                        "
"                            Zz          "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                   ▄▄▄  "
"                                 ▄▀▀▀▀▀▄"
"                         ▄▀▀▄      ▄▀▀  "
"                         ▀▀▀▀      ▀▀▀  "
