src/snapshots/herdr_pets__render__tests__renders_agent_lines.snap
---
source: src/render.rs
expression: terminal.backend()
---
"┌herdr-pets────────────────────────────┐"
"│*  pets-dev                           │"
"│z  claude                             │"
"│?  w1F:p3                             │"
"│!  watcher                            │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
