src/snapshots/herdr_pets__render__tests__renders_each_state_in_the_strip.snap
---
source: src/render.rs
expression: terminal.backend()
---
"                                   Zz!                              !      ?              "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"            ▄▄                     ▄▄                                                     "
"           ▀▀▀                  ▄▀▀▀▀▀                           ▄▀▀▄   ▄▀▀▄              "
"           ▀▀                   ▀▀▀▀▀                            ▀▀▀▀   ▀▀▀▀              "
"                                                                                          "
