src/snapshots/herdr_pets__render__tests__renders_empty_herd.snap
---
source: src/render.rs
expression: terminal.backend()
---
"┌herdr-pets────────────────────────────┐"
"│no agents                             │"
"│                                      │"
"└──────────────────────────────────────┘"
