src/snapshots/herdr_pets__render__tests__renders_overflow_counter.snap
---
source: src/render.rs
assertion_line: 460
expression: terminal.backend()
---
"       Zz              Zz            +7z"
"    ▄▀▀▄            ▄▀▀▄            ▄▀▀▄"
"    ▀▀▀▀            ▀▀▀▀            ▀▀▀▀"
"                                        "
"                                        "
"                                        "
